--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: Kişisel Blog Teması
 Theme URI: http://muhammedzaim.com
-Author: Muhammed Zaim
-Author URI: http://muhammedzaim.com
-Description: Bu tema Muhammed ZAİM tarafından özel olarak kodlanmıştır.
-Version: V 1.0
+Author: Muhammed Zaim & Muhammet Arda Yıldız
+Author URI: http://muhammedzaim.com 
+Description: Bu tema Muhammed ZAİM & Muhammet Arda Yıldız tarafından özel olarak tasarlanıp kodlanmıştır.
+Version: V 3.0
 */
 
 *{
